                      o rtsavesysname variable added
                      o JitterBuffer support added
              23. skinny.conf
                      o port variable renamed to bindport
                      o JitterBuffer support added
                      o model variable REMOVED
                      o mohinterpret variable added
                      o mohsuggest variable added
                      o speeddial variable added
                      o addon variable added
              24. voicemail.conf
                      o userscontext variable added
                      o smdiport variable added
                      o attachfmt variable added
                      o volgain variable added
                      o tempgreetwarn variable added
              25. zapata.conf
                      o pritimer variable has improved documentation
                      o New signalling method: fgccama
                      o New signalling method: fgccamamf
                      o outsignalling variable added
                      o distinctiveringaftercid variable added
                      o cidsignalling now also accepts v23_jp, and smdi
                      o usesmdi variable added
                      o smdiport variable added
                      o mohinterpret variable added
                      o mohsuggest variable added
                      o JitterBuffer support added
    * Removed Codecs/Channels:
         1. codec_g723 was removed because the actual codec implementation it was designed to use is not distributable
         2. chan_modem_* and related modules are gone because the kernel support for those interfaces is old, buggy and unsupported
    * New Utils:
         1. aelparse -- compile .ael files outside of asterisk
    * New manager events:
         1. OriginateResponse event comes to replace OriginateSuccess and OriginateFailure
    * iLBC source code no longer included (see UPGRADE.txt for details)